Add support to check ultiorganizer version
